# fableous

./: .gitignore  .gitlab-ci.yml  INSTRUCTION.md  README.md  dev-compose.yml  package-lock.json
fableous_be/: .example.env  README.md  asgi.Dockerfile  manage.py  pyproject.toml  requirements.txt  wsgi.Dockerfile
fableous_be/fableous/: apps.py  consumer.py  models.py  routing.py  urls.py  views.py
fableous_be/fableous/migrations/: 0001_initial.py  0002_story_storypage_storytag.py  0003_auto_20201027_1854.py
fableous_be/fableous_be/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
fableous_fe/: Dockerfile  README.md  package-lock.json  package.json
fableous_fe/public/: index.html
fableous_fe/src/: App.css  App.jsx  Landing.jsx  index.css  index.jsx  routes.js
fableous_fe/src/Components/: MenuAppBar.jsx  PageBar.jsx  SideBar.jsx
fableous_fe/src/Components/VoiceRecorder/: index.jsx
fableous_fe/src/DrawPage/: DrawPage.jsx
fableous_fe/src/HomePage/: CustomChip.js  CustomModal.jsx  HomePage.jsx  style.js
fableous_fe/src/Lobby/: lobby.jsx
fableous_fe/src/VoiceRecorder/: index.jsx
fableous_fe/src/atom/: socketAtom.js  storyAtom.js  userAtom.js
fableous_fe/src/components/AutoTextAreaComponent/: AutoTextAreaComponent.jsx
fableous_fe/src/components/GalleryCard/: GalleryCard.jsx
fableous_fe/src/components/TextAreaComponent/: TextAreaComponent.jsx
fableous_fe/src/constant/: ScreenRatio.js  role.js  url.js
fableous_fe/src/constants/: ScreenRatio.js
fableous_fe/src/containers/: App.jsx
fableous_fe/src/utils/: formatting.js  jwtInterceptor.js
(+62 files in other folders)
