[tool.poetry]
name = "fableous_be"
version = "0.1.0"
description = ""
authors = ["Ilman Nafian <milmannafian04@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
Django = "^3.1.2"
gunicorn = "^20.0.4"
daphne = "^2.5.0"
djangorestframework = "^3.12.1"
djangorestframework-simplejwt = "^4.4.0"
channels = "^2.4.0"
channels-redis = "^3.1.0"
dj-database-url = "^0.5.0"
django-cors-headers = "^3.5.0"
django-environ = "^0.4.5"
django-redis = "^4.12.1"
Pillow = "^8.0.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
